--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,32 +7,76 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+    display: block;
+    text-align: center;
 }
 
 
 /* Ejercicio 2: Posicionar el header */
 
 /* Acá va tu código */
-
+#ejercicioDos {
+    visibility: hidden;
+}
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
-
+#ejercicioTres {
+    position: relative;
+    top: 100px;
+    left: 200px;
+}
 
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
-
+#ejercicioCuatro {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
 
 
 /* Ejercicio 5: */
 
 /* Acá va tu código */
-
+#ejercicioCinco {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row-reverse;
+}
 
 
 /* Ejercicio 6. */
+
+/* Ejercicio 7. */
+
+/* #ejercicioSiete {
+    align-items: center;
+} */
+
+#elementoUno {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+#elementoDos {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
+
+#elementoTres {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+}
+
+#elementoCuatro {
+    margin: auto 0 auto auto;
+}
